<resources>
    <string name="app_name">Payex</string>

    <string name="vpi_nfc">NFC</string>
    <string name="vpi_ocr">OCR</string>
    <string name="vpi_qr">QR</string>

    <string name="login_hint_bin">BIN</string>
    <string name="login_hint_mid">Merchant ID</string>
    <string name="login_hint_password">Password</string>
    <string name="login_ime_login">Sign in</string>
    <string name="login_btn_login">Log In</string>
    <string name="login_btn_login_help">Forgot password?</string>
    <string name="login_btn_register">Or don\'t have an account?</string>

    <string name="login_helper_btn_reset">Reset</string>
    <string name="login_helper_btn_cancel">Cancel</string>

    <string name="about_btn_faq">F.A.Q.</string>
    <string name="about_btn_libs">Third-party libraries</string>
    <string name="about_btn_terms_of_use">Conditions of use</string>
    <string name="about_btn_legal">Legal information</string>
    <string name="about_btn_tutorial">Tutorial</string>
    <string name="about_copyright">
        <![CDATA[
            Powered by %1$s<br/>
            Version %2$s<br/>
            %3$s &#xA9; %4$s
        ]]>
    </string>
    <string name="account_merchant">
        <![CDATA[
            <b>%1$s</b><br/>
            BIN : %2$s<br/>
            MID : %3$s
        ]]>
    </string>
    <string name="account_acquirer">
        <![CDATA[
            <b>%1$s</b><br/>
            Tel &nbsp;: %2$s<br/>
            &nbsp;&nbsp;&nbsp;%3$s<br/>
            Email : %4$s
        ]]>
    </string>

    <string name="setup_welcome">welcome</string>
    <string name="setup_progress">Downloading profile (%1$s)</string>
    <string name="setup_message">It will take a few minutes depending on your connection</string>

    <string name="sale_enter_sale_amount">Enter Sale Amount</string>

    <string name="sale_slip_payment_made">Date</string>
    <string name="sale_slip_time_payment_made">Time</string>
    <string name="sale_slip_payment_voided">Payment Void?</string>
    <string name="sale_slip_amount">Amount</string>
    <string name="sale_slip_approval_code">Approval Code</string>
    <string name="sale_slip_transaction_number">Trxn Num</string>
    <string name="sale_slip_title">Resend Sales Slip?</string>
    <string name="void_slip_title">Confirm Void?</string>

    <string name="sale_slip_btn_email">Email</string>
    <string name="sale_slip_btn_void">Void</string>
    <string name="sale_slip_btn_resend">Resend Sales Slip</string>
    <string name="void_slip_btn_resend">Resend Void Slip</string>

    <string name="drawer_menu_sales">Sales</string>
    <string name="drawer_menu_void">Void</string>
    <string name="drawer_menu_history">History</string>
    <string name="drawer_menu_account">My Account</string>
    <string name="drawer_menu_about">About Payex</string>
    <string name="drawer_menu_logout">Logout</string>
    <string name="drawer_menu_help">Need help?</string>

    <string name="state_title_loading">Please wait..</string>
    <string name="state_title_payment_approved">Approved</string>
    <string name="state_title_payment_rejected">Payment rejected</string>
    <string name="state_title_sale_voided">Sale voided!</string>
    <string name="state_title_void_approved">Void approved</string>
    <string name="state_title_void_declined">Void declined</string>
    <string name="state_title_payment_declined">Declined</string>

    <string name="email_slip_hint_email">Email</string>
    <string name="email_slip_sent_success">You will receive your slip shortly.</string>
    <string name="email_slip_btn_send">Send</string>

    <string name="sale_void_title">Confirm void?</string>
    <string name="sale_void_btn_yes">Yes</string>
    <string name="sale_void_btn_no">No</string>
    <string name="sale_resend_title">Confirm resend?</string>

    <string name="sale_history_menu_calendar">Calendar</string>
    <string name="sale_history_menu_search">Search by last 4 digits</string>
    <string name="sale_history_card_ending">
        <![CDATA[
            Ending<br/>
            <b>6536</b>
        ]]>
    </string>

    <string name="register_info_title">Sign Up</string>
    <string name="register_info_desc">
        <![CDATA[
            Please contact any of our bank partners<br/>
            below for account sign up.
        ]]>
    </string>
    <string name="register_info_teaser1">Don\'t see your bank? </string>
    <string name="register_info_teaser2">Request to try.</string>
    <string name="register_info_btn_ok">Okay</string>

    <string name="register_form_btn_cancel">Cancel</string>
    <string name="register_form_btn_done">Done</string>
    <string name="register_form_title">Sign Up</string>
    <string name="register_form_desc">
        <![CDATA[
            Enter your details below and<br/>
            we will add your preferred banks<br/>
            when there are enough interest.
        ]]>
    </string>
    <string name="register_form_name">Name</string>
    <string name="register_form_email">Email</string>
    <string name="register_form_country">Country</string>
    <string name="register_form_preferred_bank">Preferred bank</string>
    <string name="register_form_phone_number">+Phone Number</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pager">PagerActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_test_reader">TestReaderActivity</string>
    <string name="title_activity_sale_slip">Sale Slip</string>
    <string name="title_activity_void_slip">Void Slip</string>
    <string name="title_activity_login">Payex</string>
    <!--<string name="title_activity_main">Payex</string>-->
    <string name="title_activity_email_slip">Email Slip</string>
    <string name="title_activity_card_reader">Read Card</string>
    <string name="title_activity_sale">Sales</string>
    <string name="title_activity_cvv">Enter CVV</string>
    <string name="title_activity_void">Void</string>
    <string name="title_activity_sale_history">Sale History</string>
    <string name="title_activity_about">About Us</string>
    <string name="title_activity_my_account">My Account</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_tab_start_date">Start Date</string>
    <string name="ttile_tab_end_date">End Date</string>
    <string name="but_done">Done</string>

</resources>
