<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_lg">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="40dp"
        android:textColor="#03a9f4"
        android:text="@string/register_info_title" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/spacing_lg"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="17dp"
        tools:text="@string/register_info_desc" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        app:layoutManager="LinearLayoutManager"
        tools:context=".ui.register.RegisterInfoFragment"
        tools:listitem="@layout/fragment_register_info_item" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/spacing_lg"
        android:layout_marginTop="@dimen/spacing_lg"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="@string/register_info_teaser1" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_done"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/spacing_lg"
        android:layout_marginTop="@dimen/spacing_lg"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:text="@string/register_info_btn_ok" />


</LinearLayout>