<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.payex.android.ui.about.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="@dimen/spacing_lg"
            app:srcCompat="@drawable/ic_logo_aboutus" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="@dimen/spacing_lg"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_faq"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:text="@string/about_btn_faq"
                    android:textAppearance="@style/AppTheme.Body1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_libs"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:text="@string/about_btn_libs"
                    android:textAppearance="@style/AppTheme.Body1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_terms"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:text="@string/about_btn_terms_of_use"
                    android:textAppearance="@style/AppTheme.Body1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_legal"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:text="@string/about_btn_legal"
                    android:textAppearance="@style/AppTheme.Body1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_tutorial"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:text="@string/about_btn_tutorial"
                    android:textAppearance="@style/AppTheme.Body1" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_about"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="24dp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:text="@string/about_copyright" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
